# hunterReportGlue

./: .dockerignore  .gitignore  DOCKER.md  DOCKER_PUBLISH_GUIDE.md  Dockerfile  HunterWyniki.txt  README.md  docker-compose.yml  hunterReport.css  hunterReport.html  hunterReport.js  package-lock.json  package.json  publish_docker.sh  stop_server.sh  testNode.js
backend/: Cargo.toml
backend/src/: main.rs
data/: HunterWyniki.txt
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs
frontend/static/: hunter_report_frontend-34094ee7f14f7f94.js  hunter_report_frontend-34094ee7f14f7f94_bg.wasm
hunter_report_rust/: Cargo.toml
hunter_report_rust/backend/: Cargo.toml
hunter_report_rust/backend/src/: main.rs
hunter_report_rust/frontend/: Cargo.toml
hunter_report_rust/frontend/src/: lib.rs
hunterreport/: index.json  manifest.json
scripts/: bundle.js  hunterReport.js
static/: index.html
static/hunterReport/: hunterReport.css  index.html
