[package]
name = "hunter_report_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
docx-rs = "0.4"
http = "1"
