[package]
name = "hunter_report_wizard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo = { version = "0.10", features = ["dialogs"] }
gloo-net = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlInputElement", "HtmlTextAreaElement", "HtmlButtonElement", "HtmlDivElement", "HtmlSpanElement", "HtmlAnchorElement", "Node", "DomTokenList", "Event", "InputEvent", "KeyboardEvent", "Blob", "Url", "Navigator", "Clipboard"] }
