[package]
name = "hunter_report_frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Clipboard", "Window", "Document"] }
gloo = { version = "0.10", features = ["dialogs", "events", "timers", "storage"] }
js-sys = "0.3"
gloo-net = "0.4"
wasm-bindgen-futures = "0.4"

